show 1 button or the other

--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviderLegalEntities/Confirm.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviderLegalEntities/Confirm.cshtml
@@ -136,8 +136,10 @@
                         Cancel
                     </a>
                 }
-                
-                <button role="button" draggable="false" class="govuk-button" data-module="govuk-button" type="submit">Confirm</button>
+                else
+                {
+                    <button role="button" draggable="false" class="govuk-button" data-module="govuk-button" type="submit">Confirm</button>
+                }
             </div>
         </form>
     </div>
