--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Added.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Added.cshtml
@@ -31,6 +31,10 @@
                 </p>
             </div>
         </div>
+        <h1 class="govuk-heading-l">
+            You've successfully added @Model.AccountProvider.ProviderName
+        </h1>
+
         <h2 class="govuk-heading-m govuk-!-margin-top-7">What happens next</h2>
         <div class="govuk-body">
             <p>You need to set permissions for @Model.AccountProvider.ProviderName so that they can act on your behalf.</p>
